--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header-field"> 
   <div class="header-left">
     <div>
-      <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
+      <%= link_to (image_tag src="logo-image.png", class: "logo-image" ),root_path %>
     </div>
   </div>
   <div class="header-right">
