--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -18,66 +18,66 @@ a {
   overflow: hidden;
   overflow: scroll;
 }
-
-.user-show-form-container {
-  background-color: white;
-  width: 600px;
-  box-shadow: 3px 3px 3px gray;
-  margin: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  padding: 50px 10px 50px 10px; 
-}
-.user-show-info-field {
-  margin:30px;
-}
-.user-show-name {
-  font-size: 40px;
-}
-.user-show-name-field{
-  width: 80%;
+/* マイページの外枠 */
+.user-show-container {
+  margin: 100px 0px;
+  padding: 0px 200px; 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+/* サイドバー */
+.user-show-sidebar {
+  background-color: white;
+  width: 300px;
+  box-shadow: 3px 3px 3px gray;
+}
+.user-info-content{
+  height: 60px;
+  border-bottom: 1px black solid;
+  display: flex;
   align-items: center;
 }
-.user-show-info-fields {
-  width: 80%;
-  margin: auto;
-}
-.user-show-info-field {
-  margin-top: 30px;
-  justify-content: space-between;
-}
-.user-show-info-title {
+.user-info-content a{
+  color: black;
   font-size: 20px;
+  margin-left: 10px;
 }
-.user-show-info {
-  margin-top: 40px;
-  width: 100%;
-  text-align: right;
+/* メインフィールド */
+/* 共有 */
+.user-info-field {
+  box-shadow: 3px 3px 3px gray;
+  background-color: white;
+  width: 700px;
 }
-.mypage-show-btn{
-  background-color: #efefef;
-  width: 50px;
-  border: 1px black solid;
-  border-radius: 3px;
-  text-align: center;
-  height: 30px;
-  
+.user-back-image{
+  height: 300px;
+  background-image: url("../user_back_image.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.mypage-show-btn a {
-  color:black;
-}
-.user-show-regist-btn {
-  background-color: #efefef;
-  padding: 4px;
-  border: 1px black solid;
-  border-radius: 3px;
+.user-show-name {
+  font-size: 40px;
   text-align: center;
-  color:black;
-  margin-left: 5px;
+  width: 200px;
+  color: white;
 }
-.user-show-regist-btn a {
-  width: 80px;
+.user-info-title{
+  height: 80px;
+  background-color: #fffacd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
+.user-info{
+  height: 100px;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
