--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="address-form-container">
       <div class="address-title-wrap">
-        <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
+        <%= link_to (image_tag src="logo-image.png", class: "logo-image" ),root_path %>
         <div class="address-form-title">住所登録</div>
       </div>
 
