--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="item-form-container"> 
     <div class="item-title-field">
-      <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
+      <%= link_to (image_tag src="logo-image.png", class: "logo-image" ),root_path %>
       <h2 class="item-form-title">商品情報入力</h2>
     </div>
     <div class="item-form-wraps">
