--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,68 +3,83 @@
 </div>
 
 <div class="wrapper">
-  <div class="user-edit-form-container">
-
-    <div class="user-edit-info">
+  
+  <div class="user-show-container">
+    <%# サイドバー %>
+    <%= render "users/shared/user_side.html.erb"%>
       
       
-
-      <div class="user-edit-info-fields">
+    <%# メインフィールド %>
+    <div class="user-info-field">
+    <div class="user-edit-form-container">
+      <div class="user-form-wraps">
         <%= form_with model: current_user, url: user_path(current_user),  local: true do |f| %>
-          <div class="user-edit-info-field">
-            <div class="user-edit-info-title">
-              名前
+
+          <div class="user-form-wrap">
+            <div class="user-form-text">
+              <label >名前</label><span class="required">必須</span>
             </div>
-            <div class="user-edit-info">
-              <%= f.text_field :name, class: "form", autofocus: true %>
-            </div>
+              <%= f.text_field :name, class: "user-form", autofocus: true %>            <%# </div> %>
           </div>
 
 
-          <div class="user-edit-info-field">
-            <div class="user-edit-info-title">
-              Eメール
+          <div class="user-form-wrap">
+            <div class="user-form-text">
+              <label >Eメール</label><span class="required">必須</span>
             </div>
-            <div class="user-edit-info">
-              <%= f.text_field :email, class: "form" %>
-            </div>
+              <%= f.text_field :email, class: "user-form" %>
           </div>
 
           
 
-          <div class="user-edit-info-field">
-            <div class="user-edit-info-title">
-              会社名
+          <div class="user-form-wrap">
+            <div class="user-form-text">
+              <label >会社名</label>
             </div>
-            <div class="user-edit-info">
-              <%= f.text_field :company_name, class: "form" %>
-            </div>
+              <%= f.text_field :company_name, class: "user-form" %>
           </div>
 
-          <div class="user-edit-info-field">
-            <div class="user-edit-info-title">
-              住所
+          <div class="user-form-wrap">
+            <div class="user-form-text">
+              <label >住所</label>
             </div>
-            <div class="user-edit-info">
-            <% if current_user.address %>
-              <%= current_user.address.postal_code%>
-              <%= current_user.address.prefecture.name%>
-              <%= current_user.address.city_name%>
-              <%= current_user.address.house_number%>
-              <%= current_user.address.building_name%>
-              <%= current_user.address.phone_number%>
-            <% else %>
-              未登録
-              <%= link_to "登録" , new_user_address_path(current_user),method: :get, local: true, class: "user-edit-regist-btn" %>
-            <% end %>
+            <div class="address-show-field">
+              <% if current_user.address %>
+                <%# アドレスが登録済み %>
+                <div class="address-btn-field">
+                  <div class="user-address-regist-btn">
+                    <%= link_to "編集" , url:"#", method: :get, local: true %>
+                  </div>
+                </div>
+                <div class="address-show">
+                  <%= current_user.address.postal_code%><br>
+                  <%= current_user.address.prefecture.name%>
+                  <%= current_user.address.city_name%>
+                  <%= current_user.address.house_number%>
+                  <%= current_user.address.building_name%><br>
+                  <%= current_user.address.phone_number%>
+                </div>
+              <% else %>
+                <%# アドレスが登録済み %>
+                <div class="address-btn-field">
+                  <div class="user-address-regist-btn">
+                    <%= link_to "登録" , new_user_address_path(current_user),method: :get, local: true %>
+                  </div>
+                </div>
+                <div class="address-show lightgray">
+                  未登録
+                </div>
+              <% end %>
             </div>
           </div>
 
           <div class="user-edit-form-submit">
-            <%= f.submit "変更する", class: "form form-btn"%>
+            <%= f.submit "変更する", class: "user-form-btn"%>
           </div>
         <% end %>
       </div>
+      </div>
+    </div>
 
     </div>
   </div>
