住所編集ページ遷移ボタン作成

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   
   <div class="user-form-container">
     <div class="user-title-field">
-      <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
+      <%= link_to (image_tag src="logo-image.png", class: "logo-image" ),root_path %>
       <div class="user-form-title">会員情報入力</div>
     </div>
     <div class="user-form-wraps">
