--- a/app/views/users/shared/_user_side.html.erb
+++ b/app/views/users/shared/_user_side.html.erb
@@ -13,6 +13,10 @@
         <a href="#">レンタル履歴</a>
       </div>
       <div class="user-info-content">
-        <%=link_to "住所登録・変更", new_user_address_path(current_user) %>
+        <% if current_user.address %>
+          <%=link_to "住所変更", edit_user_address_path(current_user) %>
+        <% else %>
+          <%=link_to "住所登録", new_user_address_path(current_user) %>
+        <% end %>
       </div>
     </div>
