カード登録ページへのリンク作成

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
               <div class="user-form-text">
                 <label >名前</label><span class="required">必須</span>
               </div>
-                <%= f.text_field :name, class: "user-form", autofocus: true %>            <%# </div> %>
+                <%= f.text_field :name, class: "user-form", autofocus: true %>
             </div>
 
 
