カード情報詳細リンクの編集

--- a/app/views/users/shared/_user_side.html.erb
+++ b/app/views/users/shared/_user_side.html.erb
@@ -20,6 +20,10 @@
         <% end %>
       </div>
       <div class="user-info-content">
-        <%=link_to "カード登録", new_user_card_path(current_user) %>
+      <% if current_user.card %>
+        <%=link_to "カード詳細", user_cards_path(current_user) %>
+      <% else %>
+        <%=link_to "カード登録", new_user_cards_path(current_user) %>
+      <% end %>
       </div>
     </div>
