--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -64,6 +64,13 @@
 
         <div class="form-half-wrap">
           <div class="item-form-text">
+            <label>在庫数</label><span class="required">必須</span>
+          </div>
+          <%= f.number_field :stock, placeholder: "半角数字 例）12", class: "item-form",style: "width:150px",min: 1 %>
+        </div>
+
+        <div class="form-half-wrap">
+          <div class="item-form-text">
             <label>金額（単価）</label><span class="required">必須</span>
           </div>
           <span>￥</span>
