--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -51,6 +51,11 @@
             </tr>
 
             <tr class="detail">
+              <th class="detail-name">レンタル可能な個数</th>
+              <td class="detail-text"><%= @item.stock %></td>
+            </tr>
+
+            <tr class="detail">
               <th class="detail-name">一日あたりの金額</th>
               <td class="detail-text"><%= @item.price %>円
               </td>  
