--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -6,7 +6,7 @@
       </div>
 
       <div  class="address-form-wraps">
-        <%= form_with model: @address, url: user_addresses_path(current_user), local: true do |f| %>
+        <%= form_with model: @address, url: user_address_path(current_user), local: true do |f| %>
 
           <div class="address-form-wrap">
             <div class="address-form-text">
