--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -23,7 +23,7 @@
             <%= image_tag "card-mastercard.gif", class:"card-logo" %>
             <%= image_tag "card-visa.gif", class:"card-logo"%>
           </div>
-          <%= form_with  url: user_cards_path, id: 'customer_form', local: true do |f| %>
+          <%= form_with  url: user_card_path, id: 'customer_form', local: true do |f| %>
 
             <div class="card-form-wrap">
                 <label class="card-form-text">カード番号</label>
