--- a/app/views/users/shared/_user_side.html.erb
+++ b/app/views/users/shared/_user_side.html.erb
@@ -21,9 +21,9 @@
       </div>
       <div class="user-info-content">
       <% if current_user.card %>
-        <%=link_to "カード詳細", user_cards_path(current_user) %>
+        <%=link_to "カード詳細", user_card_path(current_user) %>
       <% else %>
-        <%=link_to "カード登録", new_user_cards_path(current_user) %>
+        <%=link_to "カード登録", new_user_card_path(current_user) %>
       <% end %>
       </div>
     </div>
