--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -68,13 +68,17 @@
     <%# ボタン %>
     <div class="btn-field">
       <% if current_user == @item.user%>
-      <div class="item-btn">
-        <%= link_to "編集",  edit_item_path(@item), class: "form edit-btn" %>
-      </div>
-      <span class="or">or</span>
-      <div class="item-btn">
-        <%= link_to "削除", item_path(@item), method: :delete, class: " form delete-btn" %>
-      </div>
+        <div class="item-btn">
+          <%= link_to "編集",  edit_item_path(@item), class: "form edit-btn" %>
+        </div>
+        <span class="or">or</span>
+        <div class="item-btn">
+          <%= link_to "削除", item_path(@item), method: :delete, class: " form delete-btn" %>
+        </div>
+      <% else %>
+        <div class="item-btn">
+          <%= link_to "レンタルする",  new_item_order_path(@item), class: "form edit-btn" %>
+        </div>
       <% end %>
     </div>
 
