背景画像表示のためSCSSに移行

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -21,7 +21,7 @@ a {
 /* トップの画像 */
 .top-image-field {
   height: 700px;
-  background-image: image-url('images/top_image.png');
+  background-image: image-url('top_image.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
