商品の金額を週割変更

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -71,7 +71,7 @@
 
         <div class="form-half-wrap">
           <div class="item-form-text">
-            <label>金額（単価）</label><span class="required">必須</span>
+            <label>１週間のレンタル価格（単価）</label><span class="required">必須</span>
           </div>
           <span>￥</span>
           <%= f.text_field :price, placeholder: "半角数字 例）500" , class: "item-price-form"%>
