--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -28,9 +28,8 @@
         <%= @user.address.postal_code %><br>
         <%= @user.address.prefecture.name %>
         <%= @user.address.city_name %>
-        <%= @user.address.house_number %>
+        <%= @user.address.house_number %><br>
         <%= @user.address.building_name %><br>
-        <%= @user.name %>
       </div>
         
     </div>
