--- a/app/assets/stylesheets/user/show.scss
+++ b/app/assets/stylesheets/user/show.scss
@@ -52,7 +52,7 @@ a {
 }
 .user-back-image{
   height: 300px;
-  background-image: url("../user_back_image.png");
+  background-image: image-url("user_back_image.png");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
