--- a/app/assets/stylesheets/order/new.css
+++ b/app/assets/stylesheets/order/new.css
@@ -54,14 +54,52 @@ a {
 .order-user-wraps {
   margin: auto;
   width: 350px;
-  height: 150px;
   border-bottom: 1px #ccc solid;
   padding: 10px 20px;
 }
 .order-user-info {
   padding: 10px 10px;
 }
+.order-address-btn-field{
+  display: flex;
+  justify-content: flex-end;
+} 
 
+.order-address-regist-btn{
+  width: 50px;
+  border: 1px black solid;
+  background-color: lightgray;
+  text-align: center;
+  border-radius: 3px;
+}
+.order-address-regist-btn a{
+  display: block;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
+.address-btn-field{
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+
+.user-address-regist-btn{
+  width: 50px;
+  border: 1px black solid;
+  background-color: lightgray;
+  text-align: center;
+  border-radius: 3px;
+}
+.user-address-regist-btn a{
+  color: black;
+}
+.address-none {
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
 .order-form-wraps {
   margin: auto;
   width: 350px;
