--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -77,7 +77,7 @@
         </div>
       <% else %>
         <div class="item-btn">
-          <%= link_to "レンタルする",  select_card_item_order_path(@item), class: "form edit-btn" %>
+          <%= link_to "レンタル注文画面に進む",  select_card_item_order_path(@item), class: "form edit-btn" %>
         </div>
       <% end %>
     </div>
