トップページの画像の表示編集

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -21,6 +21,7 @@ a {
 }
 /* トップの画像 */
 .top-image-field {
+  width: 100vw;
   height: 700px;
   background-image: image-url('top_image.png');
   background-size: cover;
