Orderのパラメーター編集

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -73,8 +73,7 @@
             <%= f.label "返却日" %>
           </div>
           <div class="order-result-form">
-            <div id="return_date"></div><br>
-            <%= f.hidden_field :return_date ,id: "return_date_input" %>
+            <div id="return_date"></div>
           </div>
         </div>
 
