--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -7,7 +7,7 @@
 
       <div  class="address-form-wraps">
         <%= form_with model: @address, url: user_address_path(current_user), local: true do |f| %>
-
+          <%= render 'shared/error_message', model: f.object %>
           <div class="address-form-wrap">
             <div class="address-form-text">
               <label>郵便番号(半角数字・ハイフンなし)</label><span class="required">必須</span>
@@ -36,7 +36,7 @@
 
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>建物名</label><span class="required">必須</span>
+              <label>建物名</label>
             </div>
               <%= f.text_field :building_name, class: "address-form" %>
           </div>
