--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
     </div>
     <div class="user-form-wraps">
       <%= form_with model:@user, url: user_registration_path, local: true  do |f| %>
+        <%= render 'shared/error_message', model: f.object %>
         <div class="user-form-wrap">
           <div class="user-form-text">
             <label>名前</label><span class="required">必須</span>
