--- a/app/assets/stylesheets/user/show.scss
+++ b/app/assets/stylesheets/user/show.scss
@@ -10,6 +10,33 @@ a {
   border-bottom: 1px rgba(0, 0, 0, 0.253) solid;
   background-color:#ffffff;
 }
+// フラッシュメッセージ共有
+.flash {
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #68e8f1;
+  color: #ffffff;
+  position: absolute;
+    top: 15%;
+}
+.flash-alert {
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  color: #ffffff;
+  position: absolute;
+    top: 15%;
+}
 /* 背景 */
 .wrapper{
   height: 100vh;
