--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,8 +11,8 @@
         <a href="#">カテゴリーから探す</a>
       </div>
       <div class="search-field">
-        <%=form_with  do |f|%>
-          <%= f.text_field  :aa, class:"search-form",placeholder:"何かお探しですか？" %>
+        <%=form_with url: search_items_path, method: :get, local: true do |f|%>
+          <%= f.text_field  :search, class:"search-form",placeholder:"何かお探しですか？" %>
           <%= f.submit "検索" %> 
         <% end %>
       </div>
