--- a/app/assets/stylesheets/items/search.scss
+++ b/app/assets/stylesheets/items/search.scss
@@ -8,7 +8,7 @@
 // 詳細検索
 .search-side {
   background-color: #ffffff;;
-  height: 500px;
+  height: 400px;
   width: 300px;
   box-shadow: 3px 3px 3px gray;
   padding: 15px;
@@ -32,9 +32,7 @@
 
 // 検索結果
 .search-result {
-  width: 700px;
-  height: 500px;
-  
+  width: 700px;  
 }
 
 .search-result-head {
@@ -51,31 +49,37 @@
   margin-left: 30px;
   font-size: 15px;
 }
+.search-items-field{
+  display: flex;
+  flex-wrap: wrap;
+}
 .search-item-list{
   list-style: none;
-  margin-right: calc((700px - 640px) / 4);
-  .search-item{
-    width: 160px;
-    height: 220px;
-    text-align: center;
-    box-shadow: 3px 3px 3px lightslategray;
-    background-color: white;
-    border-radius: 3px;
-    .search-item-image-field{
-      height: 160px;
-      .item-image{
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-  .item-stock{
-    color: black;
-  }
-  .item-price{
-    color: black;
-  }
+  margin: calc((700px - 640px) / 8);
 }
+.search-item{
+  width: 160px;
+  height: 220px;
+  text-align: center;
+  box-shadow: 3px 3px 3px lightslategray;
+  background-color: white;
+  border-radius: 3px;
+}
+.search-item-image-field{
+  height: 160px;
+}
+.item-image{
+  width: 100%;
+  height: 100%;
+}
+      
+.item-stock{
+  color: black;
+}
+.item-price{
+  color: black;
+}
+
 
 
 
