--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -17,7 +17,7 @@
       font-weight: 600;
       margin-bottom: 20px;
     }
-    input {
+    input, select {
       display: inline-block;
       width: 100%;
       height: 50px;
