--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="search-field">
         <%=search_form_for @p, url: search_keyword_path, method: :get, local: true do |f|%>
-          <%= f.text_field  :name_cont, class:"search-form",placeholder:"何かお探しですか？" %>
+          <%= f.text_field  :name_or_explanation_cont, class:"search-form",placeholder:"何かお探しですか？" %>
           <%= f.submit "検索" %> 
         <% end %>
       </div>
