--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -22,12 +22,61 @@
       width: 100%;
       height: 50px;
       margin-bottom: 20px;
+      padding: 10px;
     }
-    .search-more-btn{
-      display: block;
-      width: 100px;
-      margin: auto;
+    label {
+      display: inline-block;
+      width: 100%;
     }
+    span {
+      display: inline-block;
+      text-align: center;
+      width: 30px;
+    }
+    .price {
+      display: inline-block;
+      width: calc((270px - 36px) / 2);
+    }
+    .check-field {
+      display: flex;
+      align-items: center;
+      margin-top: 20px;
+      .check-box{
+        display: inline-block;
+        width: 20px;
+        height: 30px;
+        margin-bottom: initial;
+        margin-left: 15px
+      }
+      .check-box-text{
+        display: block;
+        height: initial;
+      }
+    }
+    
+    .search-btn-field{
+      margin-top: 30px;
+      display: flex;
+      justify-content: space-around;
+      
+      .search-more-btn {
+        display: block;
+        width: 100px;
+        margin-bottom: initial;
+        border: none;
+        background-color: red;
+        color: #ffffff;
+        border-radius: 3px;
+      }
+      .submit{
+        background-color: red;
+
+      }
+      .clear {
+        background-color: gray;
+      }
+    }
+    
 } 
 
 // 検索結果
